<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Stock Hawk</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units" translatable="false">Change To Dollars</string>
    <string name="symbol_search" translatable="true">Symbol Search</string>
    <string name="content_test" translatable="true">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="false">FB</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="input_prefill" translatable="false"></string>
    <string name="network_toast">Uh-oh! Requires internet connection</string>
    <string name="network_toast2">The data is old,connect to internet</string>
    <string name="title_widget_detail" translatable="false">StockWidget</string>
    <string name="empty_stocklist">No stock info is available</string>
    <string name="title_activity_stock_deails">StockDeailsActivity</string>
    <string name="title_activity_stock_details">StockDetailsActivity</string>
    <string name="format_closeval" translatable="false">Close:$
        <xliff:g id="Closevalue">%1s</xliff:g>
    </string>
    <string name="stock" translatable="false">Stocks</string>
    <string name="closed_val" translatable="false">closed val</string>
    <string name="todays_date" translatable="false">todays date</string>
    <string name="format_values" translatable="false">Close Values:
        <xliff:g id="valuesare">%1$.2f</xliff:g>
        Time:
        <xliff:g id="values">%2$s</xliff:g>
    </string>
    <string name="format_val" translatable="false">Close Values:
        <xliff:g id="valuesare">%1$.2f</xliff:g>
        Date:
        <xliff:g id="values">%2$s</xliff:g>
    </string>
    <string name="datesrange" translatable="false">Dates:
        <xliff:g id="startdates">%1$s</xliff:g>
        -
        <xliff:g id="startdate">%2$s</xliff:g>
    </string>

    <string name="string_status_ok" translatable="true">You need to add new stocks by clicking add
        button!
    </string>
    <string name="string_status_no_network" translatable="true">You need to connect to internet to
        retrieve stock data!
    </string>
    <string name="string_error_json" translatable="true">JSON Error occurred!</string>
    <string name="string_server_down" translatable="true">Yahoo! Server is not responding!</string>
    <string name="string_error_server" translatable="true">Server Internal Error! Sorry!</string>
    <string name="string_status_unknown" translatable="true">Socket timeout</string>
    <string name="historicalDataStatus" translatable="false">historical_data_status</string>
    <string name="stockStatus" translatable="false">StockStatus</string>
    <string name="data_not_available" translatable="true">Stocks data not available</string>
    <string name="fab_button_content_description" translatable="true">Button to add new stock
        through its symbol.
    </string>
    <string name="list_stocks_content" translatable="true">List of Stocks</string>
    <string name="listview_widget" translatable="true">Listview in widget.</string>
    <string name="graph_content_description" translatable="true">Graph showing prices of the stock
        over time
    </string>
    <string name="action_change_units_description" translatable="true">Change units from percent to
        Dollar
    </string>
    <string name="widget_symbols" translatable="false">symbols</string>
    <string name="widget_bid" translatable="false">bidvalue</string>
    <string name="widget_changes" translatable="false">changes</string>
    <string name="widget_company" translatable="false">company</string>
    <string name="sixmonth" translatable="false">sixmonth</string>
    <string name="week_time" translatable="false">week</string>
    <string name="tagstr" translatable="false">tag</string>
    <string name="symbol" translatable="false">symbol</string>
    <string name="periodic" translatable="false">periodic</string>
    <string name="day" translatable="false">day</string>
    <string name="oneyear" translatable="false">1year</string>
    <string name="graphstr" translatable="true">Days stock graph</string>
    <string name="comparestr" translatable="true">Comparision stock graph</string>
    <string name="add" translatable="false">add</string>
    <string name="init" translatable="false">init</string>
    <string name="onestr">1</string>
    <string name="id" translatable="false">_id</string>
    <string name="fontsroboto" translatable="false">fonts/Roboto-Light.ttf</string>
    <string name="equalsquest" translatable="false">" = ?"</string>
    <string name="equalque">= ?</string>
    <string name="toasttext" translatable="true">This stock is already saved!</string>
    <string name="adddatabase" translatable="true">Added to Database</string>
    <string name="wronginput" translatable="true">wrong stock symbol input</string>
    <string name="illegatstatement" translatable="false">This should only be called when Cursor is
        valid
    </string>
    <string name="illegalstatements" translatable="false">"Could not move Cursor to position: "
    </string>
    <string-array name="timeperiod_array">
        <item>1D</item>
        <item>1W</item>
        <item>6M</item>
        <item>1Y</item>
    </string-array>

</resources>
